sugar/tests/fail/offer.mx
x : 1, q : ? _|_ |-
offer z for q in let () = x in z
